# crafter-code

./: .gitignore  IMPLEMENTATION_STATUS.md  PLAN.md  README.md  VISUAL_REFERENCE.md  biome.json  package.json  turbo.json  vercel.json
apps/desktop/: TODO.md  next.config.ts  package.json  tsconfig.json
apps/desktop/scripts/: generate-icons.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/acp/: client.rs  commands.rs  coordination_prompt.rs  mod.rs  registry.rs  session_store.rs  skill_loader.rs  skills.rs  skills_commands.rs  slash_commands.rs  swarm.rs
apps/desktop/src-tauri/src/agent/: commands.rs  manager.rs  mod.rs  stop_hook.rs
apps/desktop/src-tauri/src/claude/: client.rs  mod.rs  pricing.rs  types.rs
apps/desktop/src-tauri/src/inbox/: commands.rs  message.rs  mod.rs
apps/desktop/src-tauri/src/orchestrator/: commands.rs  manager.rs  mod.rs  session.rs  worker.rs
apps/desktop/src-tauri/src/prd/: commands.rs  manager.rs  mod.rs  parser.rs  types.rs  verifier.rs
apps/desktop/src-tauri/src/pty/: commands.rs  mod.rs  terminal.rs
apps/desktop/src-tauri/src/tasks/: commands.rs  mod.rs  task.rs
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx
apps/web/: package.json  tsconfig.json
apps/web/scripts/: generate-assets.ts
src/app/: globals.css  layout.tsx
src/components/landing/: cta.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  pricing.tsx  skills-section.tsx
(+58 files in other folders)
