[package]
name = "crafter-code"
version = "0.1.0"
description = "Agent-first IDE for 10-person $100B companies"
authors = ["Crafter Station"]
license = "MIT"
repository = "https://github.com/crafter-station/crafter-code"
edition = "2021"

[lib]
name = "crafter_code_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
dirs = "5"
anyhow = "1"
lazy_static = "1.4"

# Claude API client
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
thiserror = "1"
async-stream = "0.3"

# ACP (Agent Client Protocol) SDK
agent-client-protocol = "0.9"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
